# doc2vec

./: .gitignore  clusters.py  environment.yml  models.py  preprocessors.py  pyproject.toml  setup.py
components/: clusters.py  dimreducers.py  embedders.py  preprocessors.py
datasets/preprocessed/NewsGroup20/: metadata.json  vocabulary.json
doc2vec/: models.py
doc2vec/components/: cluster.py  clusters.py  dimreducers.py  embedder.py  embedders.py  metric.py  preprocessor.py  preprocessors.py  reducer.py
doc2vec/components/clusters/: hdbscan.py
doc2vec/components/embedders/: gensim.py
doc2vec/components/metrics/sup/: completeness.py  homogeneity.py  rand.py  vmeasure.py
doc2vec/components/metrics/unsup/: coherence.py
doc2vec/components/preprocessors/: spacy.py
doc2vec/components/reducers/: umap.py
doc2vec/components/utils/: ctfidf.py  functions.py
